# gdalraster

./: .Rbuildignore  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .lintr  404.html  CODE_OF_CONDUCT.html  CODE_OF_CONDUCT.md  CONTRIBUTING.html  CONTRIBUTING.md  CRAN-SUBMISSION  DESCRIPTION  LICENSE  LICENSE-text.html  LICENSE-text.md  LICENSE.html  LICENSE.md  NAMESPACE  NEWS.md  README.Rmd  README.md  SECURITY.html  SECURITY.md  _pkgdown.yml  authors.html  authors.md  cleanup  codecov.yml  configure  configure.ac  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
.github/workflows/: R-CMD-check.yaml  pkgdown.yaml  rhub-valgrind.yml  rhub.yaml  scorecard.yml  test-coverage.yaml
R/: RcppExports.R  cmb_table.R  display.R  gdal_cli.R  gdal_create.R  gdal_helpers.R  gdal_mdim.R  gdal_midim.R  gdal_rat.R  gdal_util.R  gdalalg.R  gdalmultidimraster.R  gdalraster.R  gdalraster_proc.R  gdalvector.R  geom.R  ogr_define.R  ogr_manage.R  ogr_proc.R  ogr_reproject.R  plot.R  proj.R  running_stats.R  s3_methods.R  transform.R  vsifile.R  zzz.R
articles/: gdal-block-cache.html  gdal-block-cache.md  gdal-config-quick-ref.html  gdal-config-quick-ref.md  gdalvector-draft.html  gdalvector-draft.md  index.html  index.md  raster-api-tutorial.html  raster-api-tutorial.md  raster-attribute-tables.html  raster-attribute-tables.md  raster-display.html  raster-display.md  use-gdal-cli-from-r.html  use-gdal-cli-from-r.md  vector-api-overview.html  vector-api-overview.md  vector-read-benchmarks.html  vector-read-benchmarks.md
articles/articles/: gdal-block-cache.html  gdalvector-draft.html  raster-display.html  use-gdal-cli-from-r.html  vector-api-overview.html  vector-read-benchmarks.html
inst/: CITATION  COPYRIGHTS
inst/extdata/: LF20_EVC_220.csv  LF20_EVH_220.csv  LF20_EVT_220.csv  LF20_F40_220.csv  complex.tif  doctype.xml  landsat_20200829_sr_b4.tif  landsat_20200829_sr_b5.tif  poly_multipoly.dbf  poly_multipoly.shp  poly_multipoly.shx  small_world_and_byte.gpkg  south-up.tif  sr_20200829.json  sr_b4_20200829.tif  sr_b5_20200829.tif  sr_b6_20200829.tif  storm_lake.GeoJSON  storm_lake.lcp  storm_lake_lcp_metadata.html  storm_lake_lcp_source.html  storml_elev.tif  storml_elev_metadata.html  storml_elev_orig.tif  storml_evc.tif  storml_evc_source.html  storml_evh.tif  storml_evh_source.html  storml_evt.tif  storml_evt_source.html  storml_pts.csv  storml_tcc.tif  storml_tcc_source.html  test.geojson  test_ogr_geojson_mixed_timezone.geojson  ynp_fires_1984_2022.gpkg
inst/extdata/domains.gdb/: a00000001.gdbtable  a00000001.gdbtablx  a00000002.gdbtable  (+12 more)
man/: CmbTable-class.Rd  CmbTable.Rd  DEFAULT_DEM_PROC.Rd  DEFAULT_NODATA.Rd  GDALAlg-class.Rd  GDALRaster-class.Rd  GDALRaster.Rd  GDALVector-class.Rd  RunningStats-class.Rd  RunningStats.Rd  VSIFile-class.Rd  addFilesInZip.Rd  apply_geotransform.Rd  autoCreateWarpedVRT.Rd  bandCopyWholeRaster.Rd  bbox_from_wkt.Rd  bbox_intersect.Rd  bbox_to_polygon.Rd  bbox_to_wkt.Rd  bbox_transform.Rd  buffer_wkt.Rd  buildRAT.Rd  buildVRT.Rd  calc.Rd  combine.Rd  copyDatasetFiles.Rd  create.Rd  createColorRamp.Rd  createCopy.Rd  data_type_helpers.Rd  deleteDataset.Rd  dem_proc.Rd  displayRAT.Rd  dt_conv.Rd  dump_open_datasets.Rd  epsg_to_wkt.Rd  fillNodata.Rd  footprint.Rd  g_area.Rd  g_binary_op.Rd  (+123 more)
news/: index.html  index.md
reference/: CmbTable-class.html  CmbTable-class.md  CmbTable.html  DEFAULT_DEM_PROC.html  DEFAULT_DEM_PROC.md  DEFAULT_NODATA.html  DEFAULT_NODATA.md  GDALAlg-class.html  GDALAlg-class.md  GDALRaster-class.html  GDALRaster-class.md  GDALRaster.html  GDALVector-class.html  GDALVector-class.md  Rcpp_CmbTable-class.html  Rcpp_GDALAlg.html  Rcpp_GDALRaster-class.html  Rcpp_GDALRaster.html  Rcpp_GDALVector-class.html  Rcpp_GDALVector.html  Rcpp_RunningStats-class.html  Rcpp_VSIFile.html  RunningStats-class.html  RunningStats-class.md  RunningStats.html  SEEK_SET.html  VSIFile-class.html  VSIFile-class.md  VSIFile.html  addFilesInZip.html  addFilesInZip.md  apply_geotransform.html  apply_geotransform.md  autoCreateWarpedVRT.html  autoCreateWarpedVRT.md  bandCopyWholeRaster.html  bandCopyWholeRaster.md  bbox_from_wkt.html  bbox_from_wkt.md  bbox_intersect.html  (+277 more)
sample-data/: README.md  bl_mrbl_ng_jul2004_rgb_720x360.tif  blue_marble_ng_neo_metadata.xml  landsat_c2ard_sr_mt_hood_jul2022_utm.json  lf_elev_220_metadata.html  lf_elev_220_mt_hood_utm.tif  lf_fbfm40_220_metadata.html  lf_fbfm40_220_mt_hood_utm.tif  mod_lstd_2023-01-01_rgb_3600x1800.tif  modis_lstd_m_neo_metadata.xml
src/: Makevars.in  Makevars.ucrt  Makevars.win  RcppExports.cpp  cmb_table.cpp  cmb_table.h  gdal_dt.cpp  gdal_dt.h  gdal_exp.cpp  gdal_mdim.cpp  gdal_vsi.cpp  gdal_vsi.h  gdalalg.cpp  gdalalg.h  gdalmultidimraster.cpp  gdalmultidimraster.h  gdalmultidimraster_exp.cpp  gdalraster.cpp  gdalraster.h  gdalraster_types.h  gdalvector.cpp  gdalvector.h  geom_api.cpp  geom_api.h  geos_conv.cpp  geos_conv.h  geos_wkt.cpp  geos_wkt.h  ogr_util.cpp  ogr_util.h  progress_r.cpp  rcpp_util.cpp  rcpp_util.h  running_stats.cpp  running_stats.h  srs_api.cpp  srs_api.h  transform.cpp  transform.h  vsifile.cpp  (+3 more)
tests/: testthat.R
tests/testthat/: test-CmbTable-class.R  test-GDALAlg-class.R  test-GDALRaster-class.R  test-GDALVector-class.R  test-RunningStats-class.R  test-VSIFile-class.R  test-calc.R  test-combine.R  test-display.R  test-gdal_cli.R  test-gdal_create.R  test-gdal_dt.R  test-gdal_exp.R  test-gdal_helpers.R  test-gdal_mdim.R  test-gdal_rat.R  test-gdal_util.R  test-gdal_vsi.R  test-gdalraster_proc.R  test-geom.R  test-geos_wkt.R  test-ogr_manage.R  test-ogr_proc.R  test-ogr_reproject.R  test-ogr_util.R  test-proj.R  test-rasterFromRaster.R  test-rasterToVRT.R  test-s3_methods.R  test-srs_api.R  test-transform.R  test-wkt_conv.R
tools/: winlibs.R
vignettes/: gdal-config-quick-ref.Rmd  raster-api-tutorial.Rmd  raster-attribute-tables.Rmd  vector-api-overview.Rmd
vignettes/articles/: gdal-block-cache.Rmd  gdalvector-draft.Rmd  raster-display.Rmd  use-gdal-cli-from-r.Rmd  vector-api-overview.Rmd  vector-read-benchmarks.Rmd
